--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-debug": "^2.1.2",
+    "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.1",
     "gulp-inject": "^4.1.0",
     "gulp-lazyload": "yivo/gulp-lazyload",
