--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "del": "^2.2.1",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssmin": "^0.1.7",
     "gulp-debug": "^2.1.2",
+    "gulp-flatten": "^0.3.1",
     "gulp-html-beautify": "^1.0.1",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.1",
     "gulp-inject": "^4.1.0",
+    "gulp-jsmin": "^0.1.5",
     "gulp-lazyload": "yivo/gulp-lazyload",
-    "gulp-minify-css": "^1.2.4",
     "gulp-newer": "^1.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-remember": "^0.3.1",
